# LastEngine

./: CMakeLists.txt  LICENCE.txt  VirtualKernel.h  VirtualModuleManager.h  kernel.cpp  kernel.h  main.cpp
IModuleManager/: graphicHandle.hpp  iWindow.hpp  iWindowManager.hpp  joystick.hpp  keyboard.hpp  mouse.hpp  systemEvent.hpp
Interfaces/LastEngine/: IException.h  IKernel.h  InfoModule.h  Module.h  Visibility.h
Interfaces/LastEngine/Module/: IModuleInfo.h  IModuleSystem.h  InfoFile.h
Kernel/: IKernel.h  VirtualKernel.h  VirtualModuleManager.h  kernel.cpp  kernel.h  main.cpp
Modules/ModuleManager/: IModuleManager.h  InfoModule.h  modulemanager.cpp  modulemanager.h
Modules/PermanantData/: CMakeLists.txt  IPermanantData.h  permanantData.cpp  permanantData.h
Modules/init@LastTeam/: CMakeLists.txt  main.cpp  signalhandler.cpp  signalhandler.h
Modules/init@LastTeam/Module/: moduleinfo.cpp  moduleinfo.h  modulesystem.cpp  modulesystem.h
doc/: Doxyfile
doc/UML/: POC.dia  Sequence start engine.dia
srclib/SQLite/: CMakeLists.txt
